# thread-tester-engine-promises

./: CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
doc/: child_main_promise_future.uml  main_child_promise_future.uml  main_child_promise_future_exception.uml
src/: CMakeLists.txt  src_main.cpp
src/comm/: CMakeLists.txt  event_logger.cpp  event_logger.h
src/core/: CMakeLists.txt  thread_driver.cpp  thread_driver.h  thread_manager.cpp  thread_manager.h  thread_wrapper.cpp  thread_wrapper.h  thread_wrapper_promiseMatrixCalc.cpp  thread_wrapper_promiseMatrixCalc.h  thread_wrapper_promiseWithException.cpp  thread_wrapper_promiseWithException.h
src/util/: CMakeLists.txt  test_ids.h  timer.cpp  timer.h
tests/output/: runTest_promiseMatrixCalc_output.txt  runTest_promiseWithException_output.txt
